# routine

./: .gitignore  Cargo.toml  tasks.json
src/: input.rs  lib.rs  main.rs
src/modules/: mod.rs  spotify.rs  task.rs  weather.rs
