[package]
name = "routine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
geolocation = "0.2.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
